fixed gaps left and right on stories on mobile

--- a/src/styles/_stories.scss
+++ b/src/styles/_stories.scss
@@ -72,7 +72,7 @@
 
     @include media-breakpoint-down($desktop-breakpoint) {
       display: flex;
-      padding: 9px 20px 6px;
+      padding: 9px 10px 6px;
       margin: 0 -15px;
       position: relative;
       width: auto;
